# mac-screensaver

./: README.md  package.json  setup.cfg  setup.py
scripts/: .screensaver-name.applescript  .screensaver-names.applescript  screensaver  screensaver-name  screensaver-names  screensaver-pid  screensaver-start  screensaver-stop  screensaver-wait
