# https://pypi.org/project/setupcfg-generator/
[metadata]
name = mac-screensaver
version = 2019.5.7
url = https://github.com/looking-for-a-job/mac-screensaver
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = screensaver

[options]
install_requires =
	mac_screensaver
	setuptools
scripts =
	scripts/.screensaver-name.applescript
	scripts/.screensaver-names.applescript
	scripts/screensaver
	scripts/screensaver-name
	scripts/screensaver-names
	scripts/screensaver-pid
	scripts/screensaver-start
	scripts/screensaver-stop
